refactor: 분리된 Validator 클래스를 통해 예외 처리 리팩토링
- CarValidator, RaceValidator 클래스로 유효성 검증 로직을 도메인에서 분리